@startuml
' ==========================
' MODELS
' ==========================

class Character {
  Integer id
  UUID uuid
  String pgName
  String background
  String diary
}

class Bag {
  Integer id
  UUID uuid
}

class Money {
  Integer id
  UUID uuid
  MoneyName moneyName
}

class Realm {
  Integer id
  UUID uuid
  RealmName realmName
}

class Card {
  Integer id
  UUID uuid
  Integer totalPoints
  Integer availablePoints
  Integer usedPoints
}

class Ability {
  Integer id
  UUID uuid
  AbilityName abilityName
  String background
}

class Reagent {
  Integer id
  UUID uuid
  ReagentName reagentName
}

class User {
  Integer id
  UUID uuid
  String provider
  String providerId
  String email
  String password
  Boolean isActive
  String name
  String surname
  String biography
  byte[] profileImage
}

class Group {
  Integer id
  UUID uuid
  GroupName name
  String path
  String description
}

' ==========================
' RELAZIONI
' ==========================

' --- User ↔ Character ---
User "1" --> "many" Character : has >

' --- Character ↔ Card ---
Character "1" --> "1" Card : has >

' --- Character ↔ Bag ---
Character "1" --> "1" Bag : owns >

' --- Bag ↔ Character ---
Bag "1" --> "1" Character : owner <

' --- Character ↔ CharacterAbilities (many-to-many) ---
Character "many" -- "many" Ability : character_ability

' --- Bag ↔ Money (one-to-many) ---
Bag "1" --> "many" Money : contains >

' --- Money ↔ Bag ---
Money "*" --> "1" Bag : belongsTo <

' --- Bag ↔ Reagent (one-to-many) ---
Bag "1" --> "many" Reagent : holds >

' --- Reagent ↔ Bag ---
Reagent "*" --> "1" Bag : in <

' --- Card ↔ Realm (one-to-one) ---
Card "1" --> "1" Realm : linked >

' --- Realm ↔ Character (one-to-one) ---
Realm "1" --> "1" Character : belongsTo >

' --- User ↔ Group (many-to-many) ---
User "many" -- "many" Group : user_group

@enduml